// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address renders address with name correctly 1`] = `
<p>
  Zack
   
  Amin
  <br />
  22 some street
  <br />
  Never land
  <br />
  DS2 3CD
  <br />
  GB
</p>
`;

exports[`Address renders correctly 1`] = `
<p>
  22 some street
  , 
  Never land
  , 
  DS2 3CD
  , 
  GB
  <br />
</p>
`;

exports[`Address renders multi line address correctly 1`] = `
<p>
  22 some street
  <br />
  Never land
  <br />
  DS2 3CD
  <br />
  GB
</p>
`;

exports[`Address renders multi line address with mobile number correctly 1`] = `
<p>
  Zack
   
  Amin
  <br />
  22 some street
  <br />
  Never land
  <br />
  DS2 3CD
  <br />
  GB
  <br />
  <br />
  0789892323
</p>
`;
